fix contrast errors

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -40,7 +40,14 @@ a:hover, a:focus {
     background: #d6d6d6;
 }
 
-/* Override readthedocs theme with DataCite colors */
+/* Override readthedocs theme with DataCite colors and improve contrast */
+
+/* Replace grey with #404040 in footer, footnotes */
+footer,
+.rst-content footer span.commit tt, footer span.commit .rst-content tt, footer span.commit code,
+.rst-content table.docutils.footnote, html.writer-html4 .rst-content table.docutils.citation, html.writer-html5 .rst-content dl.footnote {
+    color: #404040;
+}
 
 /* Replace #d9d9d9 with #F5F5F5 (color) */
 .wy-menu-vertical a,
@@ -112,14 +119,16 @@ html.writer-html4 .rst-content dl:not(.docutils)>dt, html.writer-html5 .rst-cont
 html.writer-html4 .rst-content dl:not(.docutils)>dt:before, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary):not(.simple)>dt:before {
     color: #0097C7;
 }
+
+/* Replace #6ab0de with #007EAE */
 .rst-content .admonition-title, .wy-alert-title {
-    background: #0097C7;
+    background: #007EAE;
 }
 .rst-content .note .admonition-title, .rst-content .note .wy-alert-title, .rst-content .seealso .admonition-title, .rst-content .seealso .wy-alert-title, .rst-content .wy-alert-info.admonition-todo .admonition-title, .rst-content .wy-alert-info.admonition-todo .wy-alert-title, .rst-content .wy-alert-info.admonition .admonition-title, .rst-content .wy-alert-info.admonition .wy-alert-title, .rst-content .wy-alert-info.attention .admonition-title,
 .rst-content .wy-alert-info.attention .wy-alert-title, .rst-content .wy-alert-info.caution .admonition-title, .rst-content .wy-alert-info.caution .wy-alert-title, .rst-content .wy-alert-info.danger .admonition-title, .rst-content .wy-alert-info.danger .wy-alert-title, .rst-content .wy-alert-info.error .admonition-title, .rst-content .wy-alert-info.error .wy-alert-title, .rst-content .wy-alert-info.hint .admonition-title,
 .rst-content .wy-alert-info.hint .wy-alert-title, .rst-content .wy-alert-info.important .admonition-title, .rst-content .wy-alert-info.important .wy-alert-title, .rst-content .wy-alert-info.tip .admonition-title, .rst-content .wy-alert-info.tip .wy-alert-title, .rst-content .wy-alert-info.warning .admonition-title, .rst-content .wy-alert-info.warning .wy-alert-title, .rst-content .wy-alert.wy-alert-info .admonition-title,
 .wy-alert.wy-alert-info .rst-content .admonition-title, .wy-alert.wy-alert-info .wy-alert-title {
-    background: #0097C7;
+    background: #007EAE;
 }
 
 /* Replace #e7f2fa with #EBF8FF (background) */
